@@ -2,10 +2,11 @@
 Hash: SHA256
 
 DIST raspberrypi-loader-0_p20120722.tar.xz 1110444 SHA256 5a43ebbfcc71990d82b6a44552cb16770f907ec5a7f10e16defb4de9d96afe2f SHA512 e1452234a9ff79684d12969359948e6e406709691d53d1d107477c9b7532837761cf5da65cceb7d176aee4bbfe9a559829289e2a7e41ef28136e3a12943452a0 WHIRLPOOL 9f429db9e216495d85554162679ed17446b46fef9c0cd6bead1df1e9401baf75f1deb36870cadec166dd31554dcc75073b7dc310c573a3a5740c934db6551239
+DIST raspberrypi-loader-0_p20121105.tar.xz 1262432 SHA256 99f8a50e8de5edd5c232f2926434cf89628028225c5e68476c978bead1592374 SHA512 a3ce2f9f4890db308543513060e43aa7254086d96465b79e5ee8310fe3aa4ba32975025ad381b24d28b0962f0505561d34a175915bc93d81a0c8c2c10dada2d1 WHIRLPOOL 356c804636574de714f0da893ada7ff2edb8792bd1f81e659a2fb165bc74a5b94512a80ef2aa665c171fbd7d3d0c3eeadc1fcacc126f127e3dcb1feb96b5a8f9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlANCq8ACgkQknrdDGLu8JBYGgEAgPtgEhyIwDVV5+KimmHvLBlX
-+OMjZpNjWYHkJJ2qzO4A/2QgsY27Ro/hULF8mqCkGEejFXvNQdGaxwf+2c3WAni1
-=N4FY
+iF4EAREIAAYFAlCa0GcACgkQknrdDGLu8JD3mAD+NzLXHWBwKfaKmC3ggK5Hgxi5
+u9qwOIYK36SsBeepNuUA/2duW6cAgIngtdiAk29fNKyQprL7qlxEg3IP5FyEj6BC
+=TitM
 -----END PGP SIGNATURE-----
